--- a/public/css/purged.css
+++ b/public/css/purged.css
@@ -36,7 +36,7 @@ body {
     background-repeat: repeat;
     background-position: bottom;
     background-color: var(--dark-grey);
-    border: 2px solid var(--charcoal-grey);
+    border: 2px solid var(--dark-grey);
     border-radius: 10px;
     overflow: hidden;
 }
@@ -44,7 +44,7 @@ body {
 .image_wrapper {
     position: relative;
     height: 100%;
-    border-right: 2px solid var(--charcoal-grey);
+    border-right: 2px solid var(--dark-grey);
 }
 
 .fit-content {
@@ -67,7 +67,7 @@ body {
 }
 
 .landing_description {
-    border-bottom: 2px solid var(--charcoal-grey);
+    border-bottom: 2px solid var(--dark-grey);
     padding: 75px 40px 75px;
     font-size: 24px;
     line-height: 28.8px;
